# surrealdb-protocol

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: convert.rs  lib.rs  rpc_methods.rs
crates/types-derive/src/: kind.rs  lib.rs  write_sql.rs
crates/types-derive/src/attr/: unit.rs
crates/types-derive/src/impl/: struct.rs
crates/types-derive/src/structs/: strategy.rs
crates/types-derive/src/structs/enum/: mod.rs
crates/types-derive/src/structs/fields/: mod.rs
crates/types/src/: error.rs  hashmap.rs  lib.rs  sql.rs  variables.rs
crates/types/src/flatbuffers/: collections.rs  kind.rs  misc.rs  mod.rs  table.rs  value.rs
crates/types/src/traits/: surreal_value.rs
crates/types/src/utils/: display.rs
crates/types/src/value/: bytes.rs  duration.rs  geometry.rs  into_json.rs  mod.rs
crates/types/src/value/record_id/: mod.rs  range.rs
crates/types/tests/: error_types.rs  kind.rs  serde_integration.rs  surreal_value_tests.rs
crates/types/tests/surreal_value/derive/: enum_mixed_with_value.rs  enum_tagged_tag_content.rs  mod.rs
plugins/: protoc-gen-c  protoc-gen-prost  protoc-gen-tonic  protoc-gen-ts_proto
rust/: Cargo.toml  build.rs  convert.rs  lib.rs  methods.rs  rpc_methods.rs
rust/protocol/: Cargo.toml  build.rs
rust/protocol/src/: lib.rs
rust/src/: lib.rs
rust/types/: Cargo.toml
rust/types-derive/: Cargo.toml
rust/types-derive/src/: crate_path.rs  lib.rs  write_sql.rs
rust/types-derive/src/attr/: enum.rs  field.rs  named_fields.rs  unit.rs  unnamed_fields.rs
rust/types-derive/src/impl/: enum.rs  struct.rs
rust/types-derive/src/structs/: strategy.rs  with.rs
rust/types-derive/src/structs/enum/: mod.rs  variant.rs
rust/types-derive/src/structs/fields/: mod.rs  named.rs  unnamed.rs
rust/types/src/: hashmap.rs  lib.rs  notification.rs  variables.rs
rust/types/src/flatbuffers/: geometry.rs  kind.rs  mod.rs  primitives.rs  record.rs  value.rs
rust/types/src/kind/: geometry.rs  literal.rs  mod.rs
rust/types/src/traits/: surreal_value.rs
rust/types/src/utils/: either.rs  escape.rs
rust/types/src/value/: array.rs  datetime.rs  file.rs  format.rs  mod.rs  number.rs  object.rs  range.rs  regex.rs  set.rs  table.rs  uuid.rs
rust/types/src/value/record_id/: key.rs
rust/types/tests/: error_types.rs  kind.rs  serde_integration.rs
rust/types/tests/surreal_value/: either.rs  trait.rs
rust/types/tests/surreal_value/derive/: enum_tagged_tag.rs  enum_tagged_variant.rs  enum_unit_value.rs  enum_untagged.rs  mod.rs
schema/: expr.fbs  expr.proto  rpc.proto  value.proto
scripts/: build.ts
surrealdb/protocol/rpc/v1/: rpc.proto
surrealdb/protocol/v1/: document.proto  expr.fbs  expr.proto  root.fbs  surrealism.fbs  value.fbs  value.proto
typescript/: index.ts
