[workspace]
resolver = "3"
members = [
    "rust/protocol",
    "rust/types",
    "rust/types-derive",
]

[workspace.package]
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
edition = "2024"
license = "BUSL-1.1"
license-file = "LICENSE"
version = "0.8.1"
rust-version = "1.85.0"
description = "SurrealDB protocol and type definitions"
repository = "https://github.com/surrealdb/surrealdb-protocol"
homepage = "https://github.com/surrealdb/surrealdb-protocol"
keywords = ["database", "surrealdb", "protocol", "types"]
categories = ["database-implementations", "data-structures", "embedded"]

[workspace.dependencies]
# Internal workspace crates
surrealdb-protocol = { version = "0.8.1", path = "rust/protocol", default-features = false }
surrealdb-types-derive = { version = "0.8.1", path = "rust/types-derive" }

# External dependencies used across workspace members
anyhow = "1.0.100"
arbitrary = "1.3.2"
bytes = { version = "1.5.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
flatbuffers = { version = "25.2.10", features = ["serde"] }
futures = "0.3"
geo = { version = "0.28.0", default-features = false }
geo-types = "0.7.13"
hex = "0.4.3"
http = "1.1.0"
js = { version = "0.8.0", package = "rquickjs", features = ["rust-alloc"] }
nanoid = "0.4.0"
papaya = "0.2.3"
proc-macro2 = "1.0"
prost = "0.14.1"
prost-types = "0.14.1"
tonic-prost = "0.14.2"
quote = "1.0"
regex = "1.10.6"
regex-syntax = "0.8.4"
rstest = "0.25.0"
rust_decimal = "1.39.0"
semver = "1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.145"
syn = { version = "2.0", features = ["full", "extra-traits"] }
tonic = "0.14.2"
ulid = "1.1.0"
uuid = "1.17.0"

# Dev dependencies
assert-json-diff = "2.0"

[workspace.lints.rust]
# Checks for missing documentation on public items.
missing_docs = "warn"

[workspace.lints.rustdoc]
# Checks for missing documentation on public items.
missing_crate_level_docs = "warn"

[workspace.lints.clippy]
# Checks for usage of `#[allow]` attribute and suggests replacing it with `#[expect]`.
# `#[expect]` attributes suppress the lint emission, but emit a warning if the expectation is unfulfilled.
# This is useful to be notified when the lint is no longer triggered.
# https://rust-lang.github.io/rust-clippy/master/#allow_attributes
allow_attributes = "warn"

# Checks for code like `foo = bar.clone();`.
# Custom `Clone::clone_from()` or `ToOwned::clone_into` implementations allow the objects to share resources and
# therefore avoid allocations.
# https://rust-lang.github.io/rust-clippy/master/#assigning_clones
assigning_clones = "warn"

# This lint allows boolean comparisons in assert-like macros.
# It is fine to use `assert_eq!(val, true)` in tests and is often more readable than `assert!(val)`.
# https://rust-lang.github.io/rust-clippy/master/#bool_assert_comparison
bool_assert_comparison = "allow"

# Checks for the usage of `as _` conversion using inferred type.
# https://rust-lang.github.io/rust-clippy/master/#cloned_instead_of_copied
cloned_instead_of_copied = "warn"

# Checks for function/method calls with a mutable parameter in `debug_assert!`, `debug_assert_eq!` and
# `debug_assert_ne!` macros.
# In release builds `debug_assert!` macros are optimized out by the compiler. Therefore mutating something in a
# `debug_assert!` macro results in different behavior between a release and debug build.
# https://rust-lang.github.io/rust-clippy/master/#debug_assert_with_mut_call
debug_assert_with_mut_call = "warn"

# Denies the configured methods and functions in `clippy.toml`.
# Some methods are undesirable in certain contexts, and it's beneficial to lint for them as needed.
# https://rust-lang.github.io/rust-clippy/master/#disallowed_methods
disallowed_methods = "warn"

# Checks for explicit `.into_iter()` calls in for loops when the loop already implicitly calls it.
# Removing the explicit call makes the code more concise and idiomatic.
# https://rust-lang.github.io/rust-clippy/master/#explicit_into_iter_loop
explicit_into_iter_loop = "warn"

# Checks for impls of `From<..>` that contain `panic!()` or `unwrap()`
# TryFrom should be used if there's a possibility of failure.
# https://rust-lang.github.io/rust-clippy/master/#fallible_impl_from
fallible_impl_from = "warn"

# Checks for usage of `.get().unwrap()` (or `.get_mut().unwrap()`) on a standard library type which implements Index.
# Using the Index trait ([]) is more clear and more concise.
# https://rust-lang.github.io/rust-clippy/master/#get_unwrap
get_unwrap = "warn"

# Checks for the usage of `_.to_owned()`, `vec.to_vec()`, or similar when calling `_.clone()` would be clearer.
# https://rust-lang.github.io/rust-clippy/master/#implicit_clone
implicit_clone = "warn"

# Checks for usage of `.to_string()` on an `&&T` where `T` implements `ToString` directly (like `&&str` or `&&String`).
# This bypasses the specialized implementation of ToString and instead goes through the more expensive string
# formatting facilities.
# https://rust-lang.github.io/rust-clippy/master/#inefficient_to_string
inefficient_to_string = "warn"

# Checks for large types being passed by value instead of by reference.
# Passing large types by value causes unnecessary copies and memory overhead on the stack.
# https://rust-lang.github.io/rust-clippy/master/#large_types_passed_by_value
large_types_passed_by_value = "warn"

# Checks for whole number float literals that cannot be represented as the underlying type without loss.
# If the value was intended to be exact, it will not be. This may be especially surprising when the lost precision
# is to the left of the decimal point.
# https://rust-lang.github.io/rust-clippy/master/#lossy_float_literal
lossy_float_literal = "warn"

# Checks for usage of `.as_ref().cloned()` and suggests `.cloned()` instead.
# Using `.cloned()` directly is more concise and easier to read.
# https://rust-lang.github.io/rust-clippy/master/#option_as_ref_cloned
option_as_ref_cloned = "warn"

# Checks for unnecessary calls to `.clone()` on values that are already owned or about to be dropped.
# Redundant clones waste memory and CPU cycles without providing any benefit.
# https://rust-lang.github.io/rust-clippy/master/#redundant_clone
redundant_clone = "warn"

# Checks for usage of `.contains()` followed by `.insert()` on `HashSet` or `BTreeSet`.
# Using a single `.insert()` call and checking its return value is more efficient as it avoids double lookup.
# https://rust-lang.github.io/rust-clippy/master/#set_contains_or_insert
set_contains_or_insert = "warn"

# Checks for unnecessary calls to `to_owned()`, `to_string()` and other similar conversion methods
# that result in unnecessary allocations when a reference would suffice.
# https://rust-lang.github.io/rust-clippy/master/#unnecessary_to_owned
unnecessary_to_owned = "warn"

# Checks for functions that are declared `async` but have no `.await`s inside of them.
# Async functions with no async code create overhead, both mentally and computationally.
# https://rust-lang.github.io/rust-clippy/master/#unused_async
#
# SurrealDB relies on async functions in the AST parser and executor to avoid stack overflows.
# Warning or denying this lint can cause unexpected errors.
unused_async = "allow"

# Checks for `.unwrap()` or `.unwrap_err()` calls on Results and `.unwrap()` call on `Option`s.
# https://rust-lang.github.io/rust-clippy/master/index.html#unwrap_used
unwrap_used = "warn"
