[package]
name = "surrealdb-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "The official SurrealDB Rust Client Protocol used by the SurrealDB Rust SDK."
repository.workspace = true
homepage.workspace = true
keywords = [
    "api",
    "grpc",
    "protobuf",
    "flatbuffers",
]
categories = ["database-implementations", "data-structures", "embedded"]
include = ["../../gen/rust/**/*.rs", "src/**/*"]

[package.metadata.release]
allow-branch = ["main", "HEAD"]

[lib]
name = "surrealdb_protocol"
path = "src/lib.rs"

[features]
default = ["proto", "flatbuffers", "rpc"]

proto = ["dep:prost", "dep:prost-types"]
flatbuffers = ["dep:flatbuffers"]
rpc = ["proto", "dep:tonic", "dep:tonic-prost", "dep:futures"]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
geo.workspace = true
flatbuffers = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
uuid.workspace = true
semver.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
rstest.workspace = true
serde_json.workspace = true

[package.metadata.cargo-machete]
# flatbuffers and tonic-prost are used in generated code included via include! macro
ignored = ["flatbuffers", "tonic-prost"]

[lints]
workspace = true

